--- a/Lab_1_API.ipynb
+++ b/Lab_1_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMS661A3IZGraeHojBSz/2R",
+      "authorship_tag": "ABX9TyN2yvuUtnFslGjunRA6/GjU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2558,9 +2558,9 @@
         "\n",
         "1. Your task for this assignment is to choose a YouTube video of your choice and follow the process shown above.\n",
         "\n",
-        "2. Make a new folder named `lab-1` for this assignment\n",
+        "2. Make a new folder named `lab-1` for this assignment on GitHub.\n",
         "\n",
-        "3. Upload your transcript file to your `lab-1` GitHub repo.\n",
+        "3. Upload your `transcript.txt` file to your `lab-1` GitHub repo.\n",
         "\n",
         "4. Push your Google Colab file to your `lab-1` GitHub repo.\n",
         "\n",
